--- a/requirements.txt
+++ b/requirements.txt
@@ -41,3 +41,5 @@ passlib==1.6.2
 Flask-OAuth==0.12
 Flask-Login==0.2.9
 twilio==3.6.5
+git+https://github.com/jcgregorio/httplib2.git
+Flask-OAuthlib==0.4.3
